--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==23.1.0
 backcall==0.2.0
 Brotli==1.0.9
 colorama==0.4.6
+convertdate==2.4.0
 decorator==5.1.1
 dj-database-url==2.0.0
 Django==4.2.2
@@ -16,6 +17,7 @@ inflection==0.5.1
 ipython==8.14.0
 jedi==0.18.2
 jsonschema==4.17.3
+lunardate==0.2.0
 matplotlib-inline==0.1.6
 parso==0.8.3
 pickleshare==0.7.5
@@ -24,7 +26,10 @@ psycopg2-binary==2.9.6
 pure-eval==0.2.2
 Pygments==2.15.1
 PyJWT==2.7.0
+pyluach==2.2.0
+PyMeeus==0.5.12
 pyrsistent==0.19.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
@@ -37,3 +42,4 @@ tzdata==2023.3
 uritemplate==4.1.1
 wcwidth==0.2.6
 whitenoise==6.5.0
+workalendar==17.0.0
