--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
+schedule==1.2.0
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
