--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.10.1
 asgiref==3.7.2
 asttokens==2.2.1
 attrs==23.1.0
@@ -40,6 +41,7 @@ stack-data==0.6.2
 traitlets==5.9.0
 typing_extensions==4.7.0
 tzdata==2023.3
+tzlocal==5.0.1
 uritemplate==4.1.1
 wcwidth==0.2.6
 whitenoise==6.5.0
